--- a/source/Examples/BugTrapManCppTest/BugTrapManCppTest.vs2008.vcproj
+++ b/source/Examples/BugTrapManCppTest/BugTrapManCppTest.vs2008.vcproj
@@ -19,8 +19,7 @@
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)..\bin\"
-			IntermediateDirectory="$(SolutionDir)..\intermediate\$(ProjectName)\$(Platform)\$(Configuration)\"
-            TargetName="$(ProjectName)D"
+			IntermediateDirectory="$(SolutionDir)..\intermediate\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="1"
@@ -43,12 +42,12 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="$(SolutionDir)Client;%(AdditionalIncludeDirectories)"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
-                AdditionalIncludeDirectories="$(SolutionDir)Client;%(AdditionalIncludeDirectories)"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -63,6 +62,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="$(SolutionDir)..\bin;%(AdditionalLibraryDirectories)"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="2"
@@ -70,7 +70,6 @@
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				TargetMachine="1"
-                AdditionalLibraryDirectories="$(SolutionDir)..\bin;%(AdditionalLibraryDirectories)"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -97,7 +96,7 @@
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)..\bin\"
-			IntermediateDirectory="$(SolutionDir)..\intermediate\$(ProjectName)\$(Platform)\$(Configuration)\"
+			IntermediateDirectory="$(SolutionDir)..\intermediate\$(ProjectName)\$(PlatformName)\$(ConfigurationName)\"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="1"
@@ -121,12 +120,12 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="$(SolutionDir)Client;%(AdditionalIncludeDirectories)"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="3"
-                AdditionalIncludeDirectories="$(SolutionDir)Client;%(AdditionalIncludeDirectories)"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -141,13 +140,13 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="$(SolutionDir)..\bin;%(AdditionalLibraryDirectories)"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				EntryPointSymbol="main"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				TargetMachine="1"
-                AdditionalLibraryDirectories="$(SolutionDir)..\bin;%(AdditionalLibraryDirectories)"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -199,7 +198,7 @@
 			MinFrameworkVersion="131072"
 		/>
 		<AssemblyReference
-			RelativePath="($SolutionDir)..\bin\BugTrapN.dll"
+			RelativePath=".\($solutiondir)..\bin\bugtrapn.dll"
 			AssemblyName="BugTrapN, Version=1.0.2996.34503, processorArchitecture=x86"
 			MinFrameworkVersion="131072"
 		/>
